# tasktracker

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
authh/: docker-compose.yml  reqs.txt
authh/code/: const.py  db.py  main.py  models.py  pyproject.toml  repo.py  routes.py  schemas.py  services.py
authh/code/api/: __init__.py
authh/migrations/models/: 1_20231226094950_update.py
minio/data/.minio.sys/: format.json
src/app/: adapters.py  decorators.py  main.py  settings.py
src/app/api/: router.py  schemas.py
src/app/api/task/: routes.py
src/app/core/: settings.py
src/app/db/: conf.py  custom_fields.py  models.py  repository.py
src/app/exceptions/: __init__.py  common.py  handlers.py  http.py
src/migrations/models/: 1_20231124104310_update.py  2_20231127063517_update.py  2_20231127091653_update.py  3_20231127095614_update.py  4_20231127161855_update.py
